# crusty_stocks

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: rust_main.yaml
src/: asset_type.rs  candle.rs  error.rs  lib.rs  ticker.rs  timeframe.rs
tests/: test_candle.rs  test_error.rs  test_timeframe.rs
