[package]
name = "crusty_stocks"
version = "0.0.0"
edition = "2024"
description = "Data Structure for Stock and Crypto Ticker and Candle Data"
license="Beerware"
keywords = ['stock', 'crypto', 'finance', 'candle', 'trading']
categories = ['data-structures']
readme = 'README.md'

[dependencies]

serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
json = ["serde", "serde_derive"]

[dev-dependencies]
