[package]
name = "crusty_stocks"
version = "0.0.0"
edition = "2024"
description = "Data Structure for Stock and Crypto Ticker and Candle Data"
license="Beerware"
keywords = ['stock', 'crypto', 'finance', 'candle', 'trading']
categories = ['data-structures']
readme = 'README.md'

[dependencies]

serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
serde  = ["dep:serde", "dep:serde_derive"]
json   = ["serde"]
yaml   = ["serde"]
csv = []

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
